Add authentication and deployment configuration

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Jukebox dApp - ERC-6551 Implementation</title>
+    <title>MRKD.dj App - ERC-6551 Implementation</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/interactive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/atom-one-dark.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/languages/solidity.min.js"></script>
+    <script src="js/auth.js"></script>
 </head>
 <body>
     <header>
