Update GitHub Pages workflow with enablement parameter

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Music Jukebox dApp</h1>
+            <h1>MRKD Music Jukebox dApp</h1>
             <p class="subtitle">Smart Contract Implementation with ERC-6551 Token Bound Accounts</p>
             <nav>
                 <ul>
@@ -22,7 +22,7 @@
                     <li><a href="#architecture">Architecture</a></li>
                     <li><a href="#contracts">Smart Contracts</a></li>
                     <li><a href="#findings">Findings</a></li>
-                    <li><a href="#recommendations">Recommendations</a></li>
+                    <li><a href="#future">In Progress</a></li>
                 </ul>
             </nav>
         </div>
@@ -166,7 +166,7 @@
             </div>
         </section>
 
-        <section id="In Progress" class="container section">
+        <section id="future" class="container section">
             <h2>Recommendations for Future Development</h2>
             <div class="recommendations-list">
                 <div class="recommendation">
