--- a/index.html
+++ b/index.html
@@ -143,22 +143,22 @@
                 <div class="finding-card">
                     <div class="finding-icon">🔍</div>
                     <h3>ERC-6551 Integration</h3>
-                    <p>Successfully implemented a comprehensive ERC-6551 architecture with a robust registry contract, account implementation, and TBA creation logic, enhancing the platform's capabilities.</p>
+                    <p>Built in comprehensive ERC-6551 architecture with a robust registry contract, account implementation, and TBA creation logic, enhancing the platform's capabilities.</p>
                 </div>
                 <div class="finding-card">
                     <div class="finding-icon">🔒</div>
                     <h3>Enhanced Security</h3>
-                    <p>Implemented comprehensive security measures including ownership verification, pause mechanisms, upgradeability patterns, and reentrancy protection to ensure platform integrity.</p>
+                    <p>With security measures including ownership verification, pause mechanisms, upgradeability patterns, and reentrancy protection to ensure platform integrity.</p>
                 </div>
                 <div class="finding-card">
                     <div class="finding-icon">⚙️</div>
                     <h3>Advanced Functionality</h3>
-                    <p>Developed sophisticated features including a pay-to-play mechanism, comprehensive metadata handling, rights management system, and mother account logic for improved platform operations.</p>
+                    <p>COOL features including a pay-to-play mechanism, comprehensive metadata handling, rights management system, and mother account logic for improved platform operations.</p>
                 </div>
                 <div class="finding-card">
                     <div class="finding-icon">⚡</div>
                     <h3>Optimized Performance</h3>
-                    <p>Implemented efficient data structures and storage patterns to optimize gas usage while maintaining platform functionality and user experience.</p>
+                    <p>And efficient data structures and storage patterns to optimize gas usage while maintaining platform functionality and user experience.</p>
                 </div>
             </div>
             <div class="findings-cta">
@@ -171,7 +171,7 @@
             <div class="recommendations-list">
                 <div class="recommendation">
                     <h3>Off-Chain Storage</h3>
-                    <p>Consider moving some data storage off-chain to reduce gas costs:</p>
+                    <p>Considering moving some data storage off-chain to reduce gas costs:</p>
                     <ul>
                         <li>Store mixtape metadata on IPFS and only keep the IPFS hash on-chain</li>
                         <li>Use The Graph to index social interactions instead of storing them all on-chain</li>
