--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <li><a href="#overview">Overview</a></li>
                     <li><a href="#architecture">Architecture</a></li>
                     <li><a href="#contracts">Smart Contracts</a></li>
-                    <li><a href="#findings">Findings</a></li>
-                    <li><a href="#future">In Progress</a></li>
+                    <li><a href="#findings">Insights</a></li>
+                    <li><a href="#future">Next Steps</a></li>
                 </ul>
             </nav>
         </div>
@@ -171,7 +171,7 @@
             <div class="recommendations-list">
                 <div class="recommendation">
                     <h3>Off-Chain Storage</h3>
-                    <p>Considering moving some data storage off-chain to reduce gas costs:</p>
+                    <p>Moving some data storage off-chain to reduce gas costs:</p>
                     <ul>
                         <li>Store mixtape metadata on IPFS and only keep the IPFS hash on-chain</li>
                         <li>Use The Graph to index social interactions instead of storing them all on-chain</li>
@@ -190,7 +190,7 @@
                     <h3>Enhanced User Experience</h3>
                     <p>Improve the user experience:</p>
                     <ul>
-                        <li>Consider adding a subscription model as an alternative to pay-per-play</li>
+                        <li>Adding a subscription model as an alternative to pay-per-play</li>
                         <li>Allow users to create and share playlists of mixtapes</li>
                         <li>Implement a recommendation system based on play history</li>
                     </ul>
@@ -217,7 +217,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Music Jukebox dApp. All rights reserved.</p>
+            <p>&copy; 2025 MRKD. All rights reserved.</p>
             <p>Built with ERC-6551 Token Bound Accounts</p>
         </div>
     </footer>
