Add dynamic estimates to performance 2

--- a/performance.html
+++ b/performance.html
@@ -535,7 +535,7 @@
                             <div class="test-explanation">
                                 <p>Layer 2 (Polygon) benefits:</p>
                                 <ul>
-                                    <li>Significantly lower transaction costs (81.8% reduction)</li>
+                                    <li>Significantly lower transaction costs (90% + reduction)</li>
                                     <li>Faster transaction confirmation times</li>
                                     <li>Higher throughput for social interactions</li>
                                     <li>More cost-effective for frequent operations</li>
